lab4/k8s/authors-service/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authors-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authors-node-app
  template:
    metadata:
      labels:
        app: authors-node-app
    spec:
      containers:
        - image: daryna04/authors-service:lab4
          imagePullPolicy: Always
          name: authors-node-app
          ports:
            - containerPort: 8081
