lab4/k8s/authors-service/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authors-node-app-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8081
  selector:
    app: authors-node-app
